fix: refactor file service