@@ -1,16 +1,12 @@
 package sbrf.practice.jsv.list.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.data.web.SpringDataWebProperties.Pageable;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-
-import lombok.RequiredArgsConstructor;
 import sbrf.practice.jsv.list.dto.files.CreateFileDto;
-import sbrf.practice.jsv.list.dto.files.FileDto;
 import sbrf.practice.jsv.list.dto.files.UpdateFileDto;
 import sbrf.practice.jsv.list.mappers.FileMapper;
 import sbrf.practice.jsv.list.model.File;
@@ -20,7 +16,6 @@ import javax.persistence.EntityNotFoundException;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,47 +24,34 @@ public class FileService {
     private final FileRepository repository;
     private final FileMapper mapper;
 
-    public List<FileDto> findAllFiles() {
-        return repository.findAll().stream().map(f->mapper.fileToFileDto(f)).collect(Collectors.toList());
+    public List<File> findAllFiles() {
+        return repository.findAll();
     }
 
-    public FileDto findFileById(UUID id) {
-        return mapper.fileToFileDto(repository.findById(id).orElseThrow(() -> new EntityNotFoundException(String.format("There is no file with id=\'%d\'", id))));
+    public File findFileById(UUID id) {
+        return repository.findById(id).orElseThrow(() -> new EntityNotFoundException(String.format("There is no file with id='%d'", id)));
     }
 
-    public List<FileDto> findFilesByAuthor(UUID authorId) {
-        List<FileDto> files = findAllFiles();
-        return files.stream().filter(f -> f.getAuthorID().toString().equals(authorId.toString())).collect(Collectors.toList());
-    }
+    // public List<FileDto> findFilesByAuthor(UUID authorId) {
+    //     List<FileDto> files = findAllFiles();
+    //     return files.stream().filter(f -> f.getAuthorId().toString().equals(authorId.toString())).collect(Collectors.toList());
+    // }
 
     // public Page<File> findAllSorted(Pageable pageable) {
     //     return repository.findAll(pageable);
     // }
 
-    public Page<FileDto> findAllSorted(Sort sort, Integer page, Integer valPerPage) {
-        List<FileDto> files = repository.findAll(PageRequest.of(page, valPerPage, sort)).stream().map(f->mapper.fileToFileDto(f)).collect(Collectors.toList());
-        return new PageImpl<>(files);
+    public Page<File> findAllSorted(Sort sort, Integer page, Integer valPerPage) {
+        List<File> files = repository.findAll(PageRequest.of(page, valPerPage, sort)).toList();
+        return new PageImpl<File>(files);
     }
 
-    public FileDto create(CreateFileDto dto) throws IOException {
-        File file = mapper.fileDtoToFile(dto);
-        File createdFile = repository.save(file);
-        return mapper.fileToFileDto(createdFile);
+    public File create(CreateFileDto dto) throws IOException {
+        return repository.save(mapper.createFileDtoToFile(dto));
     }
 
-    public FileDto update(UUID id, UpdateFileDto dto) throws IOException {
-        FileDto fileToUpdate;
-        try {
-            fileToUpdate = findFileById(id);
-            fileToUpdate.setFileName(dto.getFileName());
-            fileToUpdate.setAuthorID(fileToUpdate.getAuthorID());
-            fileToUpdate.setContent(dto.getContent());
-        } catch (EntityNotFoundException e) {
-            throw e;
-        }
-        File file = mapper.fileDtoToFile(fileToUpdate);
-        File updatedFile =  repository.save(file);
-        return mapper.fileToFileDto(updatedFile);
+    public File update(UUID id, UpdateFileDto dto) throws IOException {
+        return repository.save(mapper.updateFileDtoToFile(dto));
     }
 
     public void deleteById(UUID id) {
